@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-09T08:08:18Z",
+  "timestamp" : "2022-06-10T00:32:33Z",
   "count_outdated" : 1547,
   "uniques_outdated" : 417,
-  "count" : 1577,
+  "count" : 1579,
   "uniques" : 434,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
