@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 32,
   "uniques": 5,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
+      "count": 3,
       "uniques": 1
     }
   ]
